src/css/scss/components/custom/_hero-banner.scss
body.homepage .page-header-container + main > :first-child:is(.ntg-hero-banner) {
    padding-top: 60px;
}

.ntg-hero-banner {
    $this: &;
    background-color: $black;
    position: relative;

    // .ratio {
    //     &:before {
    //         padding-top: clamp(440px, var(--bs-aspect-ratio), 740px); // min and max banner size
    //     }
    // }

    &__overlay {
        position: relative;

        &::after {
            content: '';
            background: $black-gradient-1; 
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
        }
    }

    &__image,
    &__video {
        object-fit: contain;
        // position: absolute;
        width: 100%;
        height: 100%;
    }

    // &__video {
    //     @media (min-width: 1650px) {
    //         object-fit: contain;
    //     }
    // }

    .video-control {
        position: absolute;
        bottom: 20px;
        right: 20px;
        z-index: 1;
    }

    &--job-search {
        .ratio {
            &:before {
                padding-top: clamp(440px, var(--bs-aspect-ratio), 740px); // min and max banner size
            }
        }

        #{$this}__overlay {
            position: static;

            &::after {
                background: $black-gradient-3;
            }
        }
        
        #{$this}__image {
            object-fit: cover;
            position: absolute;
        }
    }
}

